--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
   },
   "homepage": "https://github.com/Champtont/First_Mongo_BE#readme",
   "dependencies": {
+    "atob": "^2.1.2",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-list-endpoints": "^6.0.0",
     "express-validator": "^6.14.2",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.3",
     "query-to-mongo": "^0.10.2"
   },
